# RT2_Final_Project_GoToGoal_Control_Under_Actuation_Noise

./: .gitignore  README.md
data/: results.csv  stats_efficiency.csv  stats_time_to_goal.csv  summary.csv
notebook/: RT2_experiment.ipynb
paper/: paper.tex
ros2_ws/src/goal_nav_experiment/: package.xml  setup.cfg  setup.py
ros2_ws/src/goal_nav_experiment/goal_nav_experiment/: controllers.py  experiment_node.py  gazebo_viz.py  simulator.py
ros2_ws/src/goal_nav_experiment/test/: smoke_test.sh
ros2_ws/src/goal_nav_experiment/worlds/: arena.sdf
