<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goal_nav_experiment</name>
  <version>1.0.0</version>
  <description>
    ROS2 node that simulates go-to-goal navigation experiments with a unicycle
    kinematic model under actuation noise. Used as the experimental backend for
    the Research Track II final assignment: it compares a proportional
    closed-loop controller against a rotate-then-translate baseline.
  </description>
  <maintainer email="7952397@studenti.unige.it">Mohamed Tawakol</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
